# Data-Science-Portfolio

./: README.md
Deep-Learning/Classification/Gender-Classification/: README.md
Deep-Learning/Classification/Gender-Classification/notebooks/: Gender_Classification_Keras.ipynb
Deep-Learning/NLP/Tweet-Sentiment-Analysis/notebooks/: Sentiment_Analysys.ipynb
Deep-Learning/NLP/Tweet-Sentiment-Analysis/results/: submission_rnn_1.csv  submission_rnn_v2.csv
Skill-Based-Projects/Machine-Learning/EDA_and_DataViz/Matplotlib/: India-Stats.ipynb  India-Tourism-Statistics-2021-Table-5.1.2_0.csv  India-Tourism-Stats.ipynb  Learning_Matplotlib.ipynb
Skill-Based-Projects/Machine-Learning/EDA_and_DataViz/Seaborn/Notebooks/: surviving-the-titanic.ipynb  wild-blueberry-yield.ipynb
Skill-Based-Projects/Machine-Learning/Regression/Seol_Bike_Sharing/: pyproject.toml
Skill-Based-Projects/Machine-Learning/Regression/Seol_Bike_Sharing/seol_bike_sharing/notebooks/: 01-eda.ipynb  02-prepare.ipynb  03-modeling.ipynb
Time-Series/Store-Sales-Forecasting/: README.md  store-sales-forecasting-in-depth.ipynb  submission_DT_log.csv  submission_ENS_LGB_XGB.csv  submission_LGB_log.csv  submission_LR_log.csv  submission_XGB_log-0.62519.csv  submission_XGB_log_0.482.csv
