[tool.poetry]
name = "seol-bike-sharing"
version = "0.1.0"
description = ""
authors = ["RishabhChaudhary <rishabh.vijay01@gmail.com>"]
readme = "README.md"
packages = [{include = "seol_bike_sharing"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
ipykernel = "^6.26.0"
panda = "^0.3.1"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
jinja2 = "^3.1.2"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.0"
mlflow = "^2.7.1"
xgboost = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
